# teg-ingestion

./: .env.example  .gitignore  CODE_QUALITY.md  README.md  pyproject.toml
data/: idp_teg_data_index.json
docs/: ingestion_tdd.html  ingestion_tdd.md
scripts/: check_typo_keys.py  cosmos_ingest.py  create_index.py  fetch_idmt_vs_valid_tickets.py  fixup_doc_key.py  generate_docs_local.py  upload_index.py
src/teg/: __init__.py
src/teg/condense/: __init__.py  attachment_ranker.py  condenser.py  config.py  models.py  ticket_context.py
src/teg/config/: __init__.py  settings.py
src/teg/contracts/: __init__.py  condense_io.py  theme_io.py  value_stream_io.py
src/teg/domain/: __init__.py  base.py  catalogue.py  condensed.py  value_stream.py
src/teg/ingestion/: __init__.py
src/teg/ingestion/catalogues/: __init__.py  (+2 more)
src/teg/integrations/: __init__.py  http_retry.py
src/teg/prompts/: __init__.py  loader.py
src/teg/services/: __init__.py  condense_service.py  theme_service.py  value_stream_service.py
src/teg/value_stream/: __init__.py  candidate_blocks.py  candidate_merger.py  config.py  content_relevance_judge.py  custom_instruction.py  drop_analysis.py  drop_explainer.py  models.py  relevance_judge.py  retrieval.py  selection.py
tests/: test_condense.py  test_cosmos_documents.py  test_document_extractor.py  test_historical_index_documents.py  test_idmt_documents.py  test_index_schema_conformance.py  test_jira_client.py  test_jira_source.py  test_search_uploader.py  test_stage_ground_truth.py  test_value_stream_field.py  test_vs_catalogue_documents.py
(+59 files in other folders)
