[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "teg-ingestion"
version = "0.1.0"
description = "Theme & Epic Generation — ingestion module (IDMT tickets -> Cosmos corpus + retrieval index)"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
# Attachment text extraction (.pdf / .pptx / .docx). Required to ingest real tickets.
extract = [
    "pypdfium2>=4.0",
    "python-pptx>=0.6",
    "python-docx>=1.0",
]
# Live Azure AI Search + Cosmos persistence (upload). Not needed for unit tests.
azure = [
    "azure-search-documents>=11.4",
    "azure-core>=1.30",
    "azure-identity>=1.16",
    "azure-cosmos>=4.7",
]
# Stage 0 ticket identification (the Neo4j funnel script).
neo4j = [
    "neo4j>=5.0",
    "python-dotenv>=1.0",
]

# Test tooling. uv installs dependency-groups by default on `uv sync`.
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/teg"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]
